first attempt at encoding blockstates