@@ -16,9 +16,7 @@ import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 
@@ -95,12 +93,13 @@ public class QBlockData extends LocationState<QBlockLocation, QBlockLocation.Pai
         if (locations.has(blockPos)) {
             return null;
         }
-        String[] faces = QBlockItem.getFaces(stack);
+        BlockState[] faces = QBlockItem.getFaces(stack);
         if (faces == null) {
             return null;
         }
         Optional<UUID> frequency = Frequential.getFrequency(stack);
-        QBlockLocation result = new QBlockLocation(blockPos, frequency, type, List.of(faces), false);
+        List<BlockState> states = new ArrayList<>(Arrays.asList(faces));
+        QBlockLocation result = new QBlockLocation(blockPos, frequency, type, states, false);
         locations.list.add(result);
         frequency.ifPresent(f -> frequencies.add(f, result, QBlockLocation.Pair::new));
         markDirty();
@@ -117,7 +116,7 @@ public class QBlockData extends LocationState<QBlockLocation, QBlockLocation.Pai
     }
 
     public void setFaceBlock(QBlockLocation location, World world, QBlock.Face face) {
-        BlockState state = location.getFaceBlock(face).getDefaultState();
+        BlockState state = location.getFaceState(face);
         setBlockState(world, location.pos, state);
     }
 
@@ -145,14 +144,22 @@ public class QBlockData extends LocationState<QBlockLocation, QBlockLocation.Pai
         if (!entangled) {
             location.observed = true;
         }
+        if (location.observedFace == null) {
+            location.observedFace = face;
+        }
         if (player != null) {
             Criteria.QUANTUM_OBSERVATION.trigger((ServerPlayerEntity) player, location.pos, type, location.type, entangled);
         }
     }
 
     public void unobserve(QBlockLocation location, World world, boolean checkFrequency) {
-        BlockState state = location.type.resolveInert().getDefaultState();
-        setBlockState(world, location.pos, state);
+        if (location.observedFace != null) {
+            BlockState state = world.getBlockState(location.pos);
+            location.faces.set(location.observedFace.index, state);
+            location.observedFace = null;
+        }
+        BlockState inert = location.type.resolveInert().getDefaultState();
+        setBlockState(world, location.pos, inert);
         location.observed = false;
         if (checkFrequency) {
             frequencies.ifPresent(location, pair -> {
